fixed hero height on mobile

--- a/style.css
+++ b/style.css
@@ -407,6 +407,7 @@ h2 {
     .hero {
         background-size:cover;
         background-position:center;
+        padding: 0;
     }
     h2 {
         font-size:3em;
@@ -460,9 +461,6 @@ h2 {
         border-width: 2px;
         padding: 20px;
         border-radius: 20px;
-    }
-    .clouds {
-        width:100%;
     }
     .menu-screen {
         padding:0;
